<resources>
    <string name="app_name">Aplicacion 1</string>

    <string name="titulo"> Aplicacion 1 </string>
    <string name="jugar"> Jugar </string>
    <string name="config"> Configuracion </string>
    <string name="info"> Acerca de </string>
    <string name="exit"> Salir </string>

    <string name="acercade"> Esta aplicación ha sido desarollada como ejemplo en el modulo de Diseño de Interficies Web para demostrar como se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <!-- No actualizado -->
    <string name="menuconfiguracio">Configuración</string>
    <string name="menuacercade">Acerca de...</string>
    <string name="menucercar">Cercar</string>

    <!-- Exemple 5.5-->

    <string name="pa_key">preferencies_principal</string>
    <string name="pa_title">preferencies_principal</string>


    <!-- ////////////////// Grupo 1///////////////////////////////////-->
    <string name="pa1_key">musica</string>
    <string name="pa1_title">Reproducir musica</string>
    <string name="pa1_sumary">Se reproduce musica de fondo</string>

    <string name="pa2_key">graficos</string>
    <string name="pa2_title">Tipo de graficos</string>
    <string name="pa2_sumary">Se escoge la representacion de graficos</string>

    <string name="pa3_key">fragmentos</string>
    <string name="pa3_title">Numero de fragmentos</string>
    <string name="pa3_sumary">En cuantos trozos se divide un asteroide</string>

    <!-- ////////////////// Grupo 2///////////////////////////////////-->
    <string name="pa_2_key">multi</string>
    <string name="pa_2_title"> Modo multijugador</string>

    <string name="pa1_2_key">online</string>
    <string name="pa1_2_title">Activar Modo Multijugador</string>

    <string name="pa2_2_key">playermax</string>
    <string name="pa2_2_title">Maximo de jugadores</string>

    <string name="pa3_2_key">connex</string>
    <string name="pa3_2_title">Tipo de connexion</string>

    <!-- ////////////////////// Grupo 3 Guardado ///////////////////// -->
    <string name="pa1_3_key">Modo de guardado</string>
    <string name="pa1_3_title">Modo de guardado</string>
    <string name="pa1_3_sumary">Elije el modo de almacenamiento</string>

</resources>
